--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "requests>=2.31.0",
     "pyyaml>=6.0.0",
     "gunicorn>=21.2.0",
+    "sqlalchemy>=2.0.0",
+    "pymysql>=1.1.0",
 ]
 
 [dependency-groups]
